# fil_backend

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  0001-Allow-predicting-with-FP32-input-and-FP64-models.patch  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  Example_Models.md  LICENSE  Makefile  README.md  README.rst  SKLearn_and_cuML.md  build.sh  build_conda_env_container.sh  run_all.sh  test_model.py  treeshap_constants.py
.github/workflows/: pre-commit.yml
ci/gitlab/: build.sh
ci/local/: build.sh
cmake/: FindRMM.cmake  TritonFilBackendConfig.cmake.in
cmake/modules/: ConfigureCUDA.cmake
conda/environments/: buildpy.yml  fil_triton_build_cuda11.4.yml  rapids_triton_dev.yml  rapids_triton_dev_cuda11.4.yml  rapids_triton_test.yml  triton_benchmark.yml  triton_test.yml  triton_test_no_client.yml
docs/: build.md  explainability.md  install.md  model_config.md  model_support.md  repo_overview.md  sklearn_and_cuml.md  tests.md  workflow.md
include/triton_fil/: c_wrappers.hpp  config.hpp  enum_conversions.hpp  exceptions.hpp  macros.h  model_instance_state.hpp  model_state.hpp  triton_buffer.cuh  triton_utils.hpp
microbenchmark/: CMakeLists.txt  forest_bench.cpp  run_microbenchmarks.sh
microbenchmark/include/: algorithm_val.hpp  binary_data.hpp  csv.hpp  data_format.hpp  exceptions.hpp  input_data.hpp  matrix.hpp  opt_parser.hpp  precision_val.hpp  results.hpp  run_fil.hpp  run_herring.hpp
microbenchmark/src/: forest_bench.cpp  forest_bench3.cpp  forest_bench4.cpp  run_fil.cu
notebooks/: README.md  environment.yml  simple_xgboost_example.ipynb
notebooks/.ipynb_checkpoints/: simple_xgboost_example-checkpoint.ipynb
notebooks/LightGBM/: README.md  lightGBM-example.ipynb
notebooks/XGBoost/: README.md
notebooks/categorical-fraud-detection/: Fraud_Detection_Example.ipynb  README.md  environment.yml
notebooks/detailed_deployment/: Deployment_Details_and_FAQs.ipynb  environment.yml
notebooks/ensembling/: Ensembling with Triton-FIL.ipynb
notebooks/faq/: FAQs.ipynb  README.md  environment.yml
notebooks/simple-xgboost/: README.md  simple_xgboost_example.ipynb
ops/: Dockerfile  E2E.md  build.sh  complete.Dockerfile  e2e.Dockerfile  e2e_build.sh  environment.yml  gpuci_conda_retry  gpuci_mamba_retry  move_deps.py  move_deps.sh  quick_build.sh
qa/: BENCHMARKS.md  Dockerfile  benchmark_model.sh  collate_benchmarks.py  entrypoint.sh  environment.yml  generate_example_models.sh  run-clang-format.py  run_benchmarks.sh  run_ci_local.sh  run_tests.sh  test_entrypoint.sh
qa/L0_e2e/: conftest.py  generate_example_model.py  test_model.py
qa/L0_xgboost/: generate_example_model.py
qa/L0_xgboost/model_repository/: build_models.py
qa/benchmark_repo/: large.json  small.json
qa/benchmark_repo/large_model/: config.pbtxt
qa/benchmark_repo/large_model-cpu/: config.pbtxt
qa/benchmark_repo/small_model/: config.pbtxt
qa/benchmark_repo/small_model-cpu/: config.pbtxt
scripts/: convert_cuml.py  convert_sklearn  convert_sklearn.py  environment.yml
src/: api.cc  api.cu  c_wrappers.cpp  config.cc  config.cpp  cpu_forest_model.h  cpu_treeshap_model.h  enum_conversions.cc  enum_conversions.cpp  exceptions.cc  exceptions.cpp  fil.cc  fil.cu  fil_config.h  forest_model.h  gpu_forest_model.h  gpu_treeshap_model.h  gtil_utils.cu  identity.cc  libtriton_fil.ldscript  linear_treeshap_constants.h  model.h  model_instance_state.cc  model_instance_state.cpp  model_instance_state.cu  model_state.cc  model_state.cpp  names.h  nvforest_config.h  original.cc  serialization.h  shared_state.h  tl_config.h  tl_model.h  tl_utils.h  treeshap_model.h  triton_utils.cc  triton_utils.cpp
src/detail/: postprocess.h  postprocess_cpu.h  postprocess_gpu.cu  postprocess_gpu.cuh  postprocess_gpu.h
src/herring/: model.hpp  node.hpp  omp_helpers.hpp  output_ops.hpp  tl_helpers.hpp  tree.hpp  type_helpers.hpp
src/herring2/: bitset.hpp  buffer.hpp  cuda_check.hpp  data_array.hpp  decision_forest.hpp  decision_forest_builder.hpp  device_id.hpp  device_setter.hpp  device_type.hpp  exceptions.hpp  flat_array.hpp  forest.hpp  forest_layout.hpp  gpu_support.hpp  infer.cuh  infer.hpp  model.hpp  ndarray.hpp  node_value.hpp  runtime_switch.hpp  tree.hpp  tree_layout.hpp  treelite_importer.hpp  vector.hpp
src/herring2/detail/: const_agnostic.hpp  copy.hpp  cpu_constants.hpp  cuda_stream.hpp  gpu_constants.hpp  host_only_throw.hpp  index_type.hpp  infer.hpp  (+6 more)
src/herring3/: ceildiv.hpp  constants.hpp  decision_forest.hpp  decision_forest_builder.hpp  exceptions.hpp  forest.hpp  forest_model.hpp  gpu_introspection.hpp  node.hpp  postprocessor.hpp  predict.cu  predict.cuh  predict.hpp  raw_array.hpp  shared_memory_buffer.cuh  treelite_importer.hpp
src/kayak/: bitset.hpp  buffer.hpp  data_array.hpp  exceptions.hpp  flat_array.hpp  gpu_support.hpp  mdspan_buffer.hpp  mdspan_convert.hpp  ndarray.hpp  padding.hpp  raw_array.hpp  structured_data.hpp  structured_multidata.hpp  tree.hpp
src/triton_fil/: buffers.cuh  config.h  dtype.h  enum_conversions.h  exceptions.h  exceptions.hpp  gtil_utils.cuh  model_instance_state.cuh  model_instance_state.h  model_state.h  narrow.h  optional.h  triton_buffer.cuh  triton_buffer_utils.cuh  triton_tensor.cuh  triton_tensor_utils.cuh  triton_utils.h  triton_utils.hpp
test/: CMakeLists.txt
test/herring2/: bitset.cpp  bitset.cu  buffer.cpp  buffer.cu  cuda_check.cpp  data_array.cpp  data_array.cu  decision_forest.cpp  decision_forest.cu  device_id.cpp  device_setter.cpp  device_type.cpp  flat_array.cpp  flat_array.cu  forest.cpp  forest.cu  gpu_support.cpp  gpu_support.cu  host_only_throw.cpp  host_only_throw.cu  index_type.cpp  ndarray.cpp  ndarray.cu  tree.cpp  tree.cu
test/kayak/: bitset.cpp  bitset.cu  buffer.cpp  buffer.cu  cuda_check.cpp  data_array.cpp  data_array.cu  device_id.cpp  device_setter.cpp  device_type.cpp  flat_array.cpp  flat_array.cu  gpu_support.cpp  gpu_support.cu  host_only_throw.cpp  host_only_throw.cu  index_type.cpp  ndarray.cpp  ndarray.cu  structured_data.cpp  tree.cpp  tree.cu
tests/: test.py
(+87 files in other folders)
